[gd_scene load_steps=7 format=3 uid="uid://divcoyo4r342x"]

[ext_resource type="Script" uid="uid://bvaq7of4bmr62" path="res://scenes/game/pause_menu.gd" id="1_aumpd"]
[ext_resource type="FontFile" uid="uid://dmkk06o8nk7i1" path="res://assets/80s-retro-future.ttf" id="1_h1roe"]
[ext_resource type="AudioStream" uid="uid://dkwpp7ugilnbp" path="res://assets/Audio/toggle_002.ogg" id="5_aumpd"]
[ext_resource type="Texture2D" uid="uid://codr7pd6pe6co" path="res://assets/pngs/HorizontalLine.png" id="5_reqyk"]
[ext_resource type="AudioStream" uid="uid://be8makh360ywo" path="res://assets/Audio/question_004.ogg" id="6_reqyk"]
[ext_resource type="PackedScene" uid="uid://d1xtwaw5asfu1" path="res://scenes/game/volume_slider.tscn" id="6_rog28"]

[node name="PauseMenu" type="Panel"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2282.0
offset_top = 672.0
offset_right = -1778.0
offset_bottom = 878.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.96152, 2.17263)
script = ExtResource("1_aumpd")

[node name="pText" type="Label" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 176.676
offset_top = -76.9679
offset_right = 343.676
offset_bottom = -23.9679
theme_override_colors/font_shadow_color = Color(0.965375, 0.396356, 0.672653, 1)
theme_override_colors/font_outline_color = Color(0.2, 0.298039, 0.396078, 1)
theme_override_constants/outline_size = 25
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 45
text = "PAUSED"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.46719
offset_top = -86.5
offset_right = 123.36978
offset_bottom = 86.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.02202, 1.01344)
theme_override_constants/separation = 7

[node name="Resume" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 26
text = "RESUME"

[node name="Restart" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 26
text = "RESTART"

[node name="SettingsButton" type="Button" parent="MainMenu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 26
text = "SETTINGS"

[node name="toMenu" type="Button" parent="MainMenu"]
texture_filter = 1
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 26
text = "QUIT TO MENU"

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -146.16064
offset_top = 12.0
offset_right = 146.16058
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 7

[node name="Label" type="Label" parent="Settings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 26
text = "VOLUME SETTINGS"
horizontal_alignment = 1

[node name="Control" type="Control" parent="Settings"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Settings/Control"]
position = Vector2(134.79037, -1.9322205)
scale = Vector2(0.36191833, 0.13493143)
texture = ExtResource("5_reqyk")

[node name="MasterVolume" type="HBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Label" type="Label" parent="Settings/MasterVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 20
text = "MASTER"

[node name="MasterSlider" parent="Settings/MasterVolume" instance=ExtResource("6_rog28")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bus_name = "Master"

[node name="MusicVolume" type="HBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="Label" type="Label" parent="Settings/MusicVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 20
text = "MUSIC"

[node name="VolumeSlider" parent="Settings/MusicVolume" instance=ExtResource("6_rog28")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bus_name = "Music"

[node name="SFXVolume" type="HBoxContainer" parent="Settings"]
layout_mode = 2
theme_override_constants/separation = 48

[node name="Label" type="Label" parent="Settings/SFXVolume"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 20
text = "SFX"

[node name="VolumeSlider" parent="Settings/SFXVolume" instance=ExtResource("6_rog28")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
bus_name = "SFX"

[node name="Control2" type="Control" parent="Settings"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="Settings/Control2"]
position = Vector2(134.79037, -1.9322205)
scale = Vector2(0.36191833, 0.13493143)
texture = ExtResource("5_reqyk")

[node name="BackButton" type="Button" parent="Settings"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_h1roe")
theme_override_font_sizes/font_size = 26
text = "BACK"

[node name="ClickSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_aumpd")
volume_db = 3.528
bus = &"SFX"

[node name="HoverSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_reqyk")
bus = &"SFX"

[connection signal="hidden" from="." to="." method="_on_hidden"]
[connection signal="mouse_entered" from="MainMenu/Resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="MainMenu/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="MainMenu/Restart" to="." method="_on_restart_mouse_entered"]
[connection signal="pressed" from="MainMenu/Restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="MainMenu/SettingsButton" to="." method="_on_settings_button_mouse_entered"]
[connection signal="pressed" from="MainMenu/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="mouse_entered" from="MainMenu/toMenu" to="." method="_on_to_menu_mouse_entered"]
[connection signal="pressed" from="MainMenu/toMenu" to="." method="_on_to_menu_pressed"]
[connection signal="mouse_entered" from="Settings/BackButton" to="." method="_on_back_button_mouse_entered"]
[connection signal="pressed" from="Settings/BackButton" to="." method="_on_back_button_pressed"]
